--- a/modello/modello_rev_2.tex
+++ b/modello/modello_rev_2.tex
@@ -166,7 +166,7 @@ si possono usare queste due quantit\`a per risolvere il problema di decisione.
 
 %In pratica, per decidere se il documento D \`e rilevante si vogliono confrontare P\{R$|$D\} e P\{NR$|$D\}, dove R indica rilevante e NR indica non rilevante.
 
-Nel contesto del modello probabilistico, lo schema di pesatura comunemente utilizzato nella funzione che assegna l'ordine ai documenti \`e il cos\`i detto BM25\cite{WBC} (Best Matching 25).
+Nel contesto del modello probabilistico, lo schema di pesatura comunemente utilizzato nella funzione che assegna l'ordine ai documenti \`e il cosiddetto BM25\cite{WBC} (Best Matching 25).
 Nel nostro caso, avendo documenti strutturati, risulta preferibile una variante denominata BM25F (Best Match 25 Model with Extension to Multiple Weighted Fields) 
 che combina efficacemente informazioni da campi diversi.
 
@@ -507,7 +507,7 @@ i risultati migliori, l'insieme delle stopword creato \`e strettamente legato al
 query sperimentali. Per questo c'\`e la possibilit\`a che i risultati ottenuti con query diverse
 siano peggiori.
 
-
+\vskip 1.5in
 %
 %Inizialmente si \`e pensato che utilizzare le stopword generali della lingua inglese fosse sufficiente per eliminare le
 %parole che non portano informazione, e di conseguenza aumentare il parametro di interesse M.A.P; i risultati
